增加功能： 1、作物档案的查看 2、生成二维码 3、将二维码保存到本地 4、将头像的最大源尺寸改为了200*200

--- a/智慧田园/podfile
+++ b/智慧田园/podfile
@@ -30,6 +30,8 @@ pod 'AMap2DMap' #2D地图SDK(2D地图和3D地图不能同时使用)
 
 pod 'AMapLocation'
 
+pod 'AMapSearch'
+
 pod ‘MJRefresh’
 
 pod 'YYFPSLabel', '~> 0.0.1'
